# uptide

./: AUTHORS  MANIFEST.in  Makefile  README  README.md  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  run_tidal_netcdf_test.sh  setup.cfg  setup.py
.github/workflows/: build.yml
fes/: fes2012.c  fes2012.pyx  libfes.pxd
regression/: Makefile  extract_boundary_points.py  orkney.geo  orkney.xy  test_orkney.py  utm.py
tests/: fes2012_test.py  test_analysis.py  test_constituent_combinations.py  test_dummy_tidal_netcdf.py  test_ellipse.py  test_fes2012.py  test_fes2012_uptide.py  test_netcdf_reader.py  test_netcdf_reader1.nc  test_netcdf_reader2.nc  test_netcdf_reader3.nc  test_tidal.py  test_tidal_netcdf.py  test_tides.py  tidal_test.py
uptide/: __init__.py  analysis.py  constituent_combinations.py  ellipse.py  equilibrium.py  fes_interpolator.py  netcdf_reader.py  otps_nodal_corrections.py  tidal.py  tidal_composer.py  tidal_netcdf.py  tides.py  ukho_nodal_corrections.py
